Changes in Version 0.5 (2018-05-07)

  - Function pre() now also supports multinomial and multivariate 
      gaussian response variables.
  
  - Function pre() now has argument 'tree.unbiased'; if set to FALSE, 
      the CART algorithm (as implemented in package 'rpart') is employed 
      for rule induction.
      
  - Argument 'maxdepth' of function pre() allows for specifying 
      varying maximum depth across trees, through specifying a 
      vector of length ntrees, or a random number generating function.
      See ?maxdepth.sampler for details.




Changes in Version 0.4 (2017-08-31)

  - Added dataset 'carrillo'
  
  - By default, a gradient boosting approach is now taken for all response 
      types. That is, partykit::ctree() and a learning rate of .01 is 
      employed by default. Alternatively, glmtree() can be employed for tree 
      induction by sprecifying use.grad = FALSE.
      
  - The 'family' argument in pre() now takes character strings as well as glm 
      family objects. 
      
  - Functions pairplot() and interact() now use HCL instead of highly saturated
      HSV colors as default plotting colors.
      
  - Bug fixed in plot.pre: Node directions are now in accordance with 
      rule definition.

  - Bug fixed in predict.pre: No error printed when response variable is not 
      supplied.



Changes in Version 0.3 (2017-08-03):

  - Function gpe() added, which fits general prediction ensembles. By default,
      it fits an ensemble of rules, linear and hinge functions. Function gpe()
      allows for specifying custom baselearner generating functions and a custom
      fitting function for the final model.
  
  - Numerous bugs fixed, yielding faster computation times and clearer plots 
      with more customization options. 
      
  - Added support for count responses. Function pre() now has a 'family' 
      argument, which should be set to 'poisson' for count outcomes (the